Charcter logic added

--- a/app/src/main/res/layout/fragment_rg.xml
+++ b/app/src/main/res/layout/fragment_rg.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"
-        tools:visibility="visible">
+        tools:visibility="invisible">
 
         <EditText
             android:id="@+id/rgFormEmailText"
@@ -183,6 +183,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rgLoginBtn" />
 
+        <ImageView
+            android:id="@+id/rgLoginImage"
+            android:layout_width="286dp"
+            android:layout_height="281dp"
+            android:src="@drawable/ic_logotipo"
+            app:layout_constraintBottom_toTopOf="@+id/rgLoginEmailText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_logotipo" />
+
     </androidx.constraintlayout.widget.ConstraintLayout> <!-- Login -->
 
     <!-- Form -->
@@ -192,7 +203,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"
-        tools:visibility="invisible">
+        tools:visibility="visible">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/rgUserHouseLayout"
@@ -300,12 +311,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
+                    android:backgroundTint="@color/design_default_color_error"
                     android:text="@string/delete"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/rgUserLogoutBtn"
-                    app:rippleColor="@color/design_default_color_error" />
+                    app:layout_constraintTop_toBottomOf="@+id/rgUserLogoutBtn" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
