--- a/app/src/main/res/layout/fragment_curiosity.xml
+++ b/app/src/main/res/layout/fragment_curiosity.xml
@@ -56,8 +56,8 @@
 
             <ImageView
                 android:id="@+id/curCuriosityCharacterHouseImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
